# AudioAndVideo

./: .gitignore
JniThread/app/: build.gradle
JniThread/app/src/androidTest/java/com/ywl5320/jnithread/: ExampleInstrumentedTest.java
JniThread/app/src/main/: AndroidManifest.xml
JniThread/app/src/main/cpp/: AndroidLog.h  native-lib.cpp
JniThread/app/src/main/java/com/ywl5320/jnithread/: MainActivity.java  ThreadDemo.java
JniThread/app/src/main/res/layout/: activity_main.xml
JniThread/app/src/main/res/values/: styles.xml
JniThread/app/src/test/java/com/ywl5320/jnithread/: ExampleUnitTest.java
MyMusic/app/: CMakeLists.txt  build.gradle
MyMusic/app/src/androidTest/java/com/ywl5320/mymusic/: ExampleInstrumentedTest.java
MyMusic/app/src/main/: AndroidManifest.xml
MyMusic/app/src/main/cpp/: native-lib.cpp
MyMusic/app/src/main/java/com/ywl5320/mymusic/: MainActivity.java
MyMusic/app/src/test/java/com/ywl5320/mymusic/: ExampleUnitTest.java
MyMusic/myplayer/: CMakeLists.txt  build.gradle
MyMusic/myplayer/src/androidTest/java/com/ywl5320/myplayer/: ExampleInstrumentedTest.java
MyMusic/myplayer/src/main/cpp/: native-lib.cpp
MyMusic/myplayer/src/main/java/com/ywl5320/myplayer/: Demo.java
android_so/arm/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
android_so/x86/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
(+1 files in other folders)
